--- a/style.css
+++ b/style.css
@@ -1,26 +1,11 @@
-a{
+a, a:hover{
     color: black;
     text-decoration: none;
 }
-
-#section{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-template-rows: auto;
-    width: 100%;
-}
-
-figure img{
-    width: 100%;
-}
-
-header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 5%;
-}
-
-header a i:hover{
-    color: blue;
-}
+ figure img{
+     height: 70%;
+     object-fit: cover;
+ }
+ figcaption a:hover{
+     background-color: grey;
+ }
